fourth version Function/method implemented on "main" class

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.compito.Test_25_10_2017.Banca
+main.class=com.compito.Test_25_10_2017.Banca_UsingFunctionTest
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
